--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://priyasarpate.github.io/idcard-generator/",
   "name": "idcard-generator",
   "version": "0.1.0",
   "private": true,
@@ -6,6 +7,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^3.1.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
